crates/cli/tests/snapshots/run_node_test__npm__installs_correct_version.snap
---
source: crates/cli/tests/run_node_test.rs
assertion_line: 526
expression: get_assert_output(&assert)
---
▪▪▪▪ npm install
▪▪▪▪ npm:version
7.0.0

Tasks: 1 completed
 Time: 100ms



