crates/cli/tests/snapshots/run_node_test__npm__runs_script_task.snap
---
source: crates/cli/tests/run_node_test.rs
expression: assert.output()
---
▪▪▪▪ npm install
▪▪▪▪ npm:viaScript
node+npm platform
v18.0.0
8.0.0
▪▪▪▪ npm:viaScript (100ms)

Tasks: 1 completed
 Time: 100ms
